Fixed box sizing on mobile

--- a/siteStyle.css
+++ b/siteStyle.css
@@ -76,7 +76,7 @@ body {
   font-size: 2rem;
   padding: .5em;
   border-radius: .2em;
-  height: 30rem;
+  min-height: 30rem;
   background-color: rgba(64, 196, 255, .2);
 }
 
